Safari White Space Fix
Safari, on desktop and iOS, seem to have an issue with white-space: pre; within textareas, so the other option of white-space: nowrap; is here to fix the issue. Hopefully I finally understand what keeps breaking!

--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,10 @@ span[data-numbered-container] {
   outline: none;
   resize: none;
 }
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
+    [data-numbered-container] textarea {
+      white-space: nowrap;
+    }
+  }
+}
